syntax = "proto3";

package blog;

option java_package = "com.yifei.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

message DeleteBlogResponse {
  string blog_id = 1;
}

message BatchListBlogRequest {
  int32 count = 1;
}

message BatchListBlogResponse {
  repeated Blog blog = 1;
}

message StreamListBlogRequest {

}

message StreamListBlogResponse {
  Blog blog = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};
  rpc BatchListBlog(BatchListBlogRequest) returns (BatchListBlogResponse) {};
  rpc StreamListBlog(StreamListBlogRequest) returns (stream StreamListBlogResponse) {};
}